@@ -970,9 +970,10 @@ test expr-23.39 {INST_EXPON: big integer} {
 } 1[string repeat 0 60]
 test expr-23.40 {INST_EXPON: overflow to big integer} {expr {(-10)**3}} -1000
 test expr-23.41 {INST_EXPON: overflow to big integer} {expr 2**64} [expr 1<<64]
-test expr-23.41 {INST_EXPON: overflow to big integer} {expr 4**32} [expr 1<<64]
-test expr-23.41 {INST_EXPON: overflow to big integer} {expr 16**16} [expr 1<<64]
-test expr-23.41 {INST_EXPON: overflow to big integer} {expr 256**8} [expr 1<<64]
+test expr-23.42 {INST_EXPON: overflow to big integer} {expr 4**32} [expr 1<<64]
+test expr-23.43 {INST_EXPON: overflow to big integer} {expr 16**16} [expr 1<<64]
+test expr-23.44 {INST_EXPON: overflow to big integer} {expr 256**8} [expr 1<<64]
+test expr-23.45 {INST_EXPON: Bug 1555371} {expr 2**1} 2
 
 # Some compilers get this wrong; ensure that we work around it correctly
 test expr-24.1 {expr edge cases; shifting} {expr int(5)>>32} 0
